<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Hello"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias=".25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".15"
        android:textSize="30sp"
        android:id="@+id/tv_h"
        />
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_h"
        app:layout_constraintStart_toStartOf="@+id/barrier_d"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/et_n"
        android:textSize="30sp"
        app:layout_constraintHorizontal_bias=".2"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/studying"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_h"
        app:layout_constraintVertical_bias=".1"
        android:textSize="25sp"
        android:id="@+id/tv_studying"
        />
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_studying"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_studying"
        android:textSize="25sp"
        android:id="@+id/et_c"
        />
     <androidx.constraintlayout.widget.Barrier
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:barrierDirection="right"
         android:id="@+id/barrier_d"
         app:constraint_referenced_ids="tv_h,tv_studying"
         />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnUpdate"
        android:textSize="20sp"
       app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_studying"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias=".2"
        android:id="@+id/btn_update"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnClear"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias=".15"
        android:id="@+id/btn_clear"
        />

    

</androidx.constraintlayout.widget.ConstraintLayout>